--- a/.github/workflows/PR-into-next-version.yml
+++ b/.github/workflows/PR-into-next-version.yml
@@ -11,17 +11,12 @@ jobs:
     steps:
       - shell: bash
         run: |
-          set -o errexit
           echo "Calculating PR branches:"
 
           # Next branch matching refs/heads/maintenance/* pattern, or empty if we're on the last one
-          next_maintenance_branch_full=$(git ls-remote --quiet --heads --sort=refname ${{ github.repositoryUrl }} 'refs/heads/maintenance/*' |
-            awk '$2 > "${{ github.ref }}" { print $2; exit }')
-          echo "  Next maintenance branch (full): ${next_maintenance_branch_full:-(none)}"
-          
-          # Cut off refs/heads/ prefix
-          next_maintenance_branch=${next_maintenance_branch_full#refs/heads/}
-          echo "  Next maintenance branch (short): ${next_maintenance_branch:-(none)}"
+          next_maintenance_branch=$(gh api '/repos/{owner}/{repo}/git/matching-refs/heads/maintenance/' \
+            --jq 'map(.ref | ltrimstr("refs/heads/") | select(. > "maintenance/mps20212")) | sort | min')
+          echo "  Next maintenance branch: ${next_maintenance_branch:-(none)}"
 
           # Substitute the default branch if empty
           default_branch=${{ github.event.repository.default_branch }}
