--- a/.github/workflows/PR-into-next-version.yml
+++ b/.github/workflows/PR-into-next-version.yml
@@ -10,6 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - shell: bash
+        env:
+          GH_TOKEN: ${{ github.token }}
         run: |
           echo "Calculating PR branches:"
 
