--- a/.github/workflows/PR-into-next-version.yml
+++ b/.github/workflows/PR-into-next-version.yml
@@ -36,12 +36,13 @@ jobs:
           echo "Pushing ${{ github.ref_name }} to $head_branch"
           
           # Create or update $head_branch
+          
           gh api --method=POST -f ref="refs/heads/$head_branch" -f sha=${{ github.sha }} "/repos/$owner_and_repo/git/refs" ||
             gh api --method=PATCH -f sha=${{ github.sha }} "/repos/$owner_and_repo/git/refs/heads/$head_branch" ||
             (echo "Could not push ${{ github.ref_name }} (${{ github.sha }}) to $head_branch" 1>&2 ; exit 1)
 
           # Create PR if it does not exist yet
-          if [[ $(gh pr list --head $head_branch --base $base_branch --json id) == '[]' ]]
+          if [[ $(gh pr list --repo $owner_and_repo --head $head_branch --base $base_branch --json id) == '[]' ]]
           then
             echo "Creating a new pull request"
             gh pr create --repo $owner_and_repo --head $head_branch --base $base_branch \
