--- a/.github/workflows/PR-into-next-version.yml
+++ b/.github/workflows/PR-into-next-version.yml
@@ -49,6 +49,7 @@ jobs:
               --title "Merge ${{ github.ref_name }} into $base_branch" \
               --body "This is an automatic PR which merges changes from \`${{ github.ref_name }}\` to \`$base_branch\`." \
               --assignee '${{ github.actor }}'
+              --reviewer '${{ github.actor }}'
           else
             echo "Pull request already exists"
           fi
