--- a/.github/workflows/PR-into-next-version.yml
+++ b/.github/workflows/PR-into-next-version.yml
@@ -10,4 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Create PR
+        id: create-pr
         uses: specificlanguages/cascading-merge@experimental/action
+
+      - name: Print PR number and URL
+        run: |
+          echo "PR number: ${{ steps.create-pr.outputs.pr_number }}"
+          echo "PR URL: ${{ steps.create-pr.outputs.pr_url }}"
