--- a/.github/workflows/PR-into-next-version.yml
+++ b/.github/workflows/PR-into-next-version.yml
@@ -12,6 +12,8 @@ jobs:
       - name: Create PR
         id: create-pr
         uses: specificlanguages/cascading-merge@experimental/action
+        with:
+          token: ${{ secrets.MY_TOKEN }}
 
       - name: Print PR number and URL
         run: |
